# learn_langchain

./: .env.example  .gitignore  DEEPAGENTS_README.md  LANGGRAPH_README.md  README.md  learning_path_langchain_v1.md  pyproject.toml
deepagents_templates/stage00_hello_deep_agent/: README.md  main.py
deepagents_templates/stage01_planning_decomposition/: README.md  main.py
deepagents_templates/stage02_context_filesystem/: README.md  main.py
deepagents_templates/stage03_subagents/: README.md  main.py
deepagents_templates/stage04_backends/: README.md  main.py
deepagents_templates/stage05_long_term_memory/: README.md  main.py
deepagents_templates/stage06_human_in_the_loop/: README.md  main.py
deepagents_templates/stage07_skills_memory/: AGENTS.md  README.md  main.py
deepagents_templates/stage08_sandboxes_cli/: README.md  main.py
deepagents_templates/stage09_capstone/: README.md  main.py
langgraph_templates/stage00_hello_graph/: README.md  main.py
langgraph_templates/stage01_state_design/: README.md  main.py
langgraph_templates/stage02_nodes_edges/: README.md  main.py
langgraph_templates/stage03_tool_integration/: README.md  main.py
langgraph_templates/stage04_persistence/: README.md  main.py
langgraph_templates/stage05_streaming/: README.md  main.py
langgraph_templates/stage06_human_in_the_loop/: README.md  main.py
langgraph_templates/stage07_subgraph_multi_agent/: README.md  main.py
langgraph_templates/stage09_capstone/: main.py  (+1 more)
mini_agent_dashscope/: .gitignore  README.md  UNIFIED_STAGE_GUIDE.md  common.py
nanocode_dashscope/: README.md
(+94 files in other folders)
